# opencad_demo

./: CMakeLists.txt  cadinfo
libopencad/: cadheader.cpp
